extensions/http-webhook-connector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kw-webhook
  labels:
    pod-security.kubernetes.io/enforce: restricted
